--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Duyen's Portfolio
+title: Duyen Nguyen
 email: duyenngu@usc.edu
 url: https://duyen21.github.io/portfolio/
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
@@ -17,11 +17,11 @@ bing_verify:
 # - static : pass through formspree.io to validate email sending
 # - disqus : replace contact form by disqus thread
 # - comment the line below if you want to stick with the default PHP contact form
-contact: static
+# contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
-disqus_shortname: myshortname
+# disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -48,7 +48,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: <a href="mailto:duyenngu@usc.edu" style="color: white;">duyenngu@usc.edu</a>
+  - line: <a href="mailto:duyenngu@usc.edu" style="color: red;">duyenngu@usc.edu</a>
 
 # Credits content
 credits: '<a href="https://calendly.com/duyen21" style="color: white;">Schedule at Calendly</a>'
