--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ bing_verify:
 # - static : pass through formspree.io to validate email sending
 # - disqus : replace contact form by disqus thread
 # - comment the line below if you want to stick with the default PHP contact form
-contact: static
+# contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
@@ -48,7 +48,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: <a href="mailto:duyenngu@usc.edu" style="color: red;">duyenngu@usc.edu</a>
+  - line: <a href="mailto:duyenngu@usc.edu">duyenngu@usc.edu</a>
 
 # Credits content
 credits: '<a href="https://calendly.com/duyen21" style="color: white;">Schedule at Calendly</a>'
