--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ social:
     url: https://www.kaggle.com/duyen21/
 
 # Email content
-emails: <a href="mailto:duyenngu@usc.edu">duyenngu@usc.edu</a>
+emails: <a href="mailto:duyenngu@usc.edu" style="color: white;">duyenngu@usc.edu</a>
 
 # Credits content
 credits: '<a href="https://calendly.com/duyen21" style="color: white;">Schedule at Calendly</a>'
