--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social:
     url: https://github.com/duyen21/
   - title: kaggle
     url: https://www.kaggle.com/duyen21/
-  - title: tableau
+  - title: tumblr
     url: https://public.tableau.com/app/profile/duyen21/
 
 # Email content
