--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: duyenngu@usc.edu
 url: https://duyen21.github.io/portfolio/
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Data Analyst - Data Scientist - Excel, Python, SQL expert"
+skills: "Data Analyst - Data Scientist"
 meta_author: Duyen Nguyen
 
 # Google webmaster tools
@@ -45,7 +45,7 @@ social:
     url: https://github.com/duyen21/
   - title: kaggle
     url: https://www.kaggle.com/duyen21/
-  - title: tumblr
+  - title: tableau
     url: https://public.tableau.com/app/profile/duyen21/
 
 # Email content
