--- a/_config.yml
+++ b/_config.yml
@@ -49,12 +49,10 @@ social:
     url: https://public.tableau.com/app/profile/duyen21/
 
 # Email content
-emails: <p><p>
-'<a href="mailto:duyenngu@usc.edu" style="color: white;">duyenngu@usc.edu</a>'
+emails: '<a href="mailto:duyenngu@usc.edu" style="color: white;">duyenngu@usc.edu</a>'
 
 # Credits content
-credits: <p><p>
-'<a href="https://calendly.com/duyen21" style="color: white;">Schedule at Calendly</a>'
+credits: '<a href="https://calendly.com/duyen21" style="color: white;">Schedule at Calendly</a>'
 
 # Build settings
 markdown: kramdown
